objects/vlocity_ins__VlocityState__c.object
<CustomObject>
    <description>A state (such as Draft, Submitted, Approved or Superceded) defined within a given Vlocity State Model. States identify whether the governed object is allowed to be deleted or updated when in the state and which record type the record should be in when in that state. Master-detail child object of Vlocity State Model.</description>
    <fields>
        <fullName>vlocity_ins__DTPStateModelName__c</fullName>
        <description>Workaround to support import/export of Vlocity Actions that are associated with state model.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DTP State Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NoDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NoUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelId__c</fullName>
        <label>Vlocity State Model</label>
        <referenceTo>vlocity_ins__VlocityStateModel__c</referenceTo>
        <relationshipLabel>Vlocity State</relationshipLabel>
        <relationshipName>Vlocity_State</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateRecordType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Vlocity State</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>